--- a/src/PipeAndFilter.Tests.Unit/PipeAndFilter.Tests.Unit.csproj
+++ b/src/PipeAndFilter.Tests.Unit/PipeAndFilter.Tests.Unit.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PipeAndFIlter.Domain\PipeAndFIlter.Domain.csproj" />
+    <ProjectReference Include="..\PipeAndFilter.Logging\PipeAndFilter.Logging.csproj" />
     <ProjectReference Include="..\PipeAndFilter.Models\PipeAndFilter.Models.csproj" />
   </ItemGroup>
 
