--- a/src/PipeAndFilter.Logging/PipeAndFilter.Logging.csproj
+++ b/src/PipeAndFilter.Logging/PipeAndFilter.Logging.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Exceptionless.AspNetCore" Version="4.4.0" />
+  </ItemGroup>
+
 </Project>
