--- a/src/PipeAndFilter.Tests.Integration/PipeAndFilter.Tests.Integration.csproj
+++ b/src/PipeAndFilter.Tests.Integration/PipeAndFilter.Tests.Integration.csproj
@@ -12,4 +12,11 @@
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PipeAndFIlter.Domain\PipeAndFIlter.Domain.csproj" />
+    <ProjectReference Include="..\PipeAndFilter.Logging\PipeAndFilter.Logging.csproj" />
+    <ProjectReference Include="..\PipeAndFilter.Models\PipeAndFilter.Models.csproj" />
+    <ProjectReference Include="..\PipeAndFilter.Tests.Helpers\PipeAndFilter.Tests.Helpers.csproj" />
+  </ItemGroup>
+
 </Project>
