--- a/src/PipeAndFilter/PipeAndFilter.csproj
+++ b/src/PipeAndFilter/PipeAndFilter.csproj
@@ -4,8 +4,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<DocumentationFile>obj\Debug\netcoreapp3.1\PipeAndFilter.xml</DocumentationFile>
+		<NoWarn>1701;1702;1591;1573</NoWarn>
+	</PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Exceptionless.AspNetCore" Version="4.4.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
   </ItemGroup>
 
   <ItemGroup>
